--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -4,9 +4,49 @@
     <meta charset="pt-BR" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Início</title>
-    <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="../css/main.css" />
   </head>
   <body>
-    <!--header:-->
+    <!--banner:-->
+    <section>
+      <div class="sobre">
+        <img
+          class="inicio"
+          src="../img/inicio.png"
+          alt="Foto em família ilustrada"
+        />
+        <div class="paragrafo-inicio">
+          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sit
+            amet diam sit amet quam mattis maximus. Proin congue justo vitae
+            diam facilisis mattis. Vestibulum nec suscipit massa. Sed odio
+            tortor, faucibus eu mauris at, mollis tempus orci. Proin risus orci,
+            imperdiet ac mauris et, egestas auctor leo. Integer erat nisl,
+            eleifend ac laoreet id, finibus eu arcu. In vitae diam vestibulum,
+            gravida quam semper, accumsan justo. Suspendisse vehicula mauris id
+            blandit finibus.
+          </p>
+          <p>
+            Nunc dolor enim, cursus ut congue nec, euismod a turpis. Integer
+            suscipit sapien sit amet ullamcorper lobortis. Mauris vitae bibendum
+            nisl, et venenatis nulla. Duis sollicitudin rutrum ipsum nec luctus.
+            Maecenas hendrerit lacinia ultricies. Fusce vel quam ac dui
+            condimentum volutpat vel vel elit. Aenean eget felis vitae nunc
+            porta malesuada. Duis efficitur orci nec suscipit viverra. In
+            dictum, arcu vel blandit pretium, dolor metus hendrerit ligula, quis
+            maximus erat ex ac lorem. Nunc ornare quam sed condimentum pretium.
+            In dapibus lectus quis dolor vehicula elementum. Duis sollicitudin
+            nisl et faucibus pellentesque. Cras dictum erat at massa eleifend
+            euismod.
+          </p>
+          <div class="btn-inicio">
+            <a href="/" class="btn">Link da plataforma</a>
+            <a href="/" class="btn">Programação</a>
+            <a href="/" class="btn">Catálogo</a>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
