--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="pt-BR" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Início</title>
+    <title>Semana de Cinema Negro de Belo Horizonte</title>
     <link rel="stylesheet" type="text/css" href="../css/main.css" />
   </head>
   <body>
