página>inicio: centralizado ok

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -9,7 +9,7 @@
   <body>
     <!--banner:-->
     <section>
-      <div class="sobre">
+      <div class="container flex-end">
         <img
           class="inicio"
           src="../img/inicio.png"
