card dos filmes

--- a/semanadecinemanegro/inicio.html
+++ b/semanadecinemanegro/inicio.html
@@ -4,7 +4,7 @@
     <meta charset="pt-BR" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Semana de Cinema Negro de Belo Horizonte</title>
-    <link rel="stylesheet" type="text/css" href="../css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
   <body>
     <!--banner:-->
@@ -12,7 +12,7 @@
       <div class="container flex-end">
         <img
           class="inicio"
-          src="../img/inicio.png"
+          src="img/inicio.png"
           alt="Foto em família ilustrada"
         />
         <div class="paragrafo-inicio">
