--- a/semanadecinemanegro/sessao_de_abertura.html
+++ b/semanadecinemanegro/sessao_de_abertura.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sessão de Abertura</title>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <script src="https://use.fontawesome.com/fb3074d44d.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="http://fortawesome.github.io/Font-Awesome/assets/font-awesome/css/font-awesome.css"
+    />
   </head>
   <body>
     <section>
@@ -34,7 +41,7 @@
             <div class="btn-filmes">
               <div class="info">
                 <button type="button" class="collapsible">
-                  MAIS INFORMAÇÕES
+                  MAIS INFORMAÇÕES <i class="fas fa-chevron-down"></i>
                 </button>
                 <div class="content">
                   <ul>
@@ -65,7 +72,9 @@
                   </ul>
                 </div>
               </div>
-              <a href="/" class="btn">Assista o filme</a>
+              <a href="/" class="btn"
+                >Assista o filme <i class="fas fa-external-link-alt"></i
+              ></a>
             </div>
           </div>
         </div>
