--- a/temporary pages/cndn/index.html
+++ b/temporary pages/cndn/index.html
@@ -11,14 +11,18 @@
         background-color: #c96213;
         margin: 0;
         padding: 0;
+        width: 100%;
+        height: 100%;
       }
       div.titulo {
-        width: 50%;
-        margin: 30% auto;
-
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        height: 100vh;
         font-family: 'Fira Sans', sans-serif;
         color: #fff;
-        text-align: center;
       }
       h1 {
         font-size: 2em;
@@ -30,6 +34,7 @@
         font-size: 1.5em;
         text-transform: uppercase;
         font-weight: 300;
+        margin-top: 0;
       }
     </style>
   </head>
