card: oficinas, sem o filtro na foto

--- a/semanadecinemanegro/sessao_de_abertura.html
+++ b/semanadecinemanegro/sessao_de_abertura.html
@@ -17,12 +17,12 @@
   <body>
     <section>
       <div class="container">
-        <div class="filmeBox">
+        <div class="postBox">
           <div
-            class="filmeImg"
-            style="background-image: url('img/home-01.jpg')"
+            class="postImg filmeImg"
+            style="background-image: url('img/MB_01.jpg')"
           ></div>
-          <div class="filmeInfo">
+          <div class="postInfo">
             <h1>A MORTE BRANCA DO FEITICEIRO NEGRO</h1>
             <h2>THE WHITE DEATH OF THE BLACK WIZARD</h2>
             <h3>SANTA CATARINA, 2020, 10’</h3>
