teste de destaque dentro do parágrafo

--- a/semanadecinemanegro/oficinas.html
+++ b/semanadecinemanegro/oficinas.html
@@ -37,8 +37,11 @@
               sobrevivência. Além da leitura de textos e debates nos encontros,
               a oficina prevê um exercício prático como forma de traduzir
               questões teóricas para o campo da execução de uma proposta de
-              curadoria. Atenção: este curso observará critérios de gênero, raça
-              e localidade para a seleção das pessoas participantes.
+              curadoria.
+              <strong
+                >Atenção: este curso observará critérios de gênero, raça e
+                localidade para a seleção das pessoas participantes.</strong
+              >
             </p>
             <p>
               Film programming is an arena where we can dispute the gaze,
