--- a/semanadecinemanegro/mostra_surreal16.html
+++ b/semanadecinemanegro/mostra_surreal16.html
@@ -7,6 +7,57 @@
     <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
   <body>
-    <!--header:-->
+    <section>
+      <div class="mainBanner">
+        <div class="mainInfo">
+          <div class="title">
+            <!-- <img src="img/detalhe_topBar.svg" alt="" /> -->
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              version="1.1"
+              id="Layer_1"
+              x="0px"
+              y="0px"
+              viewBox="0 0 124.5 58.9"
+              style="enable-background: new 0 0 124.5 58.9"
+              xml:space="preserve"
+            >
+              <style type="text/css">
+                .st0 {
+                  fill: var(--cor-laranja);
+                }
+              </style>
+              <path
+                class="st0"
+                d="M39.9,29.4L11.1,58.2L0,47.6l18.4-18.2L0,11.2L11.1,0.6L39.9,29.4z M91.3,10.4l-18.7,19l18.7,18.9L80.2,58.9  L62.1,40.2L44,58.9L32.9,48.3l18.7-18.9l-18.7-19L44,0l18.1,18.7L80.2,0L91.3,10.4z M124.5,11.2l-18.4,18.2l18.4,18.2l-11.2,10.6  L84.5,29.4l28.8-28.8L124.5,11.2z"
+              />
+            </svg>
+            <h1>Surreal16 Collective, Um Novo Olhar para o Cinema Nigeriano</h1>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sit
+            amet diam sit amet quam mattis maximus. Proin congue justo vitae
+            diam facilisis mattis. Vestibulum nec suscipit massa. Sed odio
+            tortor, faucibus eu mauris at, mollis tempus orci. Proin risus orci,
+            imperdiet ac mauris et, egestas auctor leo. Integer erat nisl,
+            eleifend ac laoreet id, finibus eu arcu. In vitae diam vestibulum,
+            gravida quam semper, accumsan justo. Suspendisse vehicula mauris id
+            blandit finibus. Nunc dolor enim, cursus ut congue nec, euismod a
+            turpis. Integer suscipit sapien sit amet ullamcorper lobortis.
+            Mauris vitae bibendum nisl, et venenatis nulla. Duis sollicitudin
+            rutrum ipsum nec luctus. Maecenas hendrerit lacinia ultricies. Fusce
+            vel quam ac dui condimentum volutpat vel vel elit. Aenean eget felis
+            vitae nunc porta malesuada. Duis efficitur orci nec suscipit
+            viverra. In dictum, arcu vel blandit pretium, dolor metus hendrerit
+            ligula, quis maximus erat ex ac lorem. Nunc ornare quam sed
+            condimentum pretium. In dapibus lectus quis dolor vehicula
+            elementum. Duis sollicitudin nisl et faucibus pellentesque. Cras
+            dictum erat at massa eleifend euismod.
+          </p>
+        </div>
+        <div class="mainIllus"><img src="img/surreal16.png" alt="" /></div>
+      </div>
+    </section>
   </body>
 </html>
