--- a/semanadecinemanegro/mostra_surreal16.html
+++ b/semanadecinemanegro/mostra_surreal16.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="pt-BR" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mostra "SURREAL16"</title>
+    <title>
+      Mostra "Surreal16 Collective, Um Novo Olhar para o Cinema Nigeriano"
+    </title>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
   <body>
