--- a/semanadecinemanegro/sessao_de_abertura.html
+++ b/semanadecinemanegro/sessao_de_abertura.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="pt-BR" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Maria José Novais Oliveira - Nossa atriz</title>
+    <title>Mostra "Maria José Novais Oliveira - Nossa atriz"</title>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <link
       rel="stylesheet"
