--- a/semanadecinemanegro/debates.html
+++ b/semanadecinemanegro/debates.html
@@ -61,5 +61,33 @@
         </div>
       </div>
     </section>
+    <section>
+      <div class="debateContainer">
+        <div class="debateBox">
+          <div class="debateTitle">
+            <h1>[ DEBATE 1] Vivências Afro-Diaspóricas</h1>
+            <h2>12/04/2021, 19H</h2>
+          </div>
+          <div class="debateInfo">
+            <ul>
+              <li>
+                <div
+                  class="postImg debateImg"
+                  style="
+                    background-image: url('img/oficinas/OF_HeitorAugusto.jpg');
+                  "
+                ></div>
+                <span>Milena Manfredini | De um lado do Atlântico</span>
+              </li>
+              <li>
+                <a href="/" class="btn debate-btn"
+                  >ASSISTA NO YOUTUBE <i class="fas fa-external-link-alt"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
