--- a/semanadecinemanegro/sessao_de_abertura.html
+++ b/semanadecinemanegro/sessao_de_abertura.html
@@ -5,14 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mostra "Maria José Novais Oliveira - Nossa atriz"</title>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="http://fortawesome.github.io/Font-Awesome/assets/font-awesome/css/font-awesome.css"
-    />
+    <link rel="stylesheet" type="text/css" href="css/screen.css" />
   </head>
   <body>
     <section>
