separação do style do index, tirando do main e criando uma folha só pra ele (pois são dominios diferentes)

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
       type="text/css"
       href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" type="text/css" href="./semanadecinemanegro/css/main.css"/>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="./styles.css" />
   </head>
   <body>
     <section>
@@ -24,11 +27,21 @@
         <!-- Item -->
         <div class="item">
           <div class="img-fill">
-            <img src="./home-01.jpg" alt="">
+            <img src="./home-01.jpg" alt="" />
             <div class="info">
               <div class="button-page">
-                <button type="button" onclick="location.href='../semanadecinemanegro/index.html'">Semana de Cinema Negro de Belo Horizonte</button>
-                <button type="button" onclick="location.href='../temporary pages/cndn/index.html'" >Cinema e Narrativas da Diáspora Negra</button>
+                <button
+                  type="button"
+                  onclick="location.href='../semanadecinemanegro/index.html'"
+                >
+                  Semana de Cinema Negro de Belo Horizonte
+                </button>
+                <button
+                  type="button"
+                  onclick="location.href='../temporary pages/cndn/index.html'"
+                >
+                  Cinema e Narrativas da Diáspora Negra
+                </button>
               </div>
               <div class="text">
                 <p>Festinha no Torra - 2007</p>
@@ -41,11 +54,21 @@
         <!-- Item -->
         <div class="item">
           <div class="img-fill">
-            <img src="./home-02.jpg" alt="">
+            <img src="./home-02.jpg" alt="" />
             <div class="info">
               <div class="button-page">
-                <button type="button" onclick="location.href='../semanadecinemanegro/index.html'">Semana de Cinema Negro de Belo Horizonte</button>
-                <button type="button" onclick="location.href='../temporary pages/cndn/index.html'" >Cinema e Narrativas da Diáspora Negra</button>
+                <button
+                  type="button"
+                  onclick="location.href='../semanadecinemanegro/index.html'"
+                >
+                  Semana de Cinema Negro de Belo Horizonte
+                </button>
+                <button
+                  type="button"
+                  onclick="location.href='../temporary pages/cndn/index.html'"
+                >
+                  Cinema e Narrativas da Diáspora Negra
+                </button>
               </div>
               <div class="text">
                 <p>Quinquilharia lll - 2020 / Pintura sobre tela, 100x80cm</p>
@@ -65,7 +88,7 @@
     ></script>
 
     <script>
-      $(".Modern-Slider").slick({
+      $('.Modern-Slider').slick({
         dots: false,
         infinite: true,
         speed: 500,
