detalhes mobile e svg acessível

--- a/semanadecinemanegro/mostra_surreal16.html
+++ b/semanadecinemanegro/mostra_surreal16.html
@@ -7,6 +7,7 @@
       Mostra "Surreal16 Collective, Um Novo Olhar para o Cinema Nigeriano"
     </title>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/screen.css" />
   </head>
   <body>
     <section>
@@ -25,6 +26,8 @@
               style="enable-background: new 0 0 124.5 58.9"
               xml:space="preserve"
             >
+              <title>Setas detalhe posicionadas antes do título</title>
+
               <style type="text/css">
                 .st0 {
                   fill: var(--cor-laranja);
