--- a/semanadecinemanegro/oficinas.html
+++ b/semanadecinemanegro/oficinas.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oficinas</title>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/screen.css" />
   </head>
   <body>
     <section>
@@ -22,7 +23,10 @@
               viewBox="0 0 124.5 58.9"
               style="enable-background: new 0 0 124.5 58.9"
               xml:space="preserve"
+              class="notHidden"
             >
+              <title>Setas detalhe posicionadas antes do título</title>
+
               <style type="text/css">
                 .st0 {
                   fill: var(--cor-salmao);
