--- a/semanadecinemanegro/cine_escrituras_pretas.html
+++ b/semanadecinemanegro/cine_escrituras_pretas.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mostra "Cine-Escrituras Pretas"</title>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/screen.css" />
   </head>
   <body>
     <section>
@@ -23,6 +24,8 @@
               style="enable-background: new 0 0 124.5 58.9"
               xml:space="preserve"
             >
+              <title>Setas detalhe posicionadas antes do título</title>
+
               <style type="text/css">
                 .st0 {
                   fill: var(--cor-azul);
