--- a/semanadecinemanegro/creditos.html
+++ b/semanadecinemanegro/creditos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Créditos</title>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" href="css/screen.css" />
   </head>
   <body>
     <div class="mainBanner">
@@ -21,7 +22,9 @@
             viewBox="0 0 124.5 58.9"
             style="enable-background: new 0 0 124.5 58.9"
             xml:space="preserve"
+            class="notHidden"
           >
+          <title>Setas detalhe posicionadas antes do título</title>
             <style type="text/css">
               .st0 {
                 fill: var(--cor-laranja);
