--- a/semanadecinemanegro/sessao_de_abertura.html
+++ b/semanadecinemanegro/sessao_de_abertura.html
@@ -24,6 +24,8 @@
               style="enable-background: new 0 0 124.5 58.9"
               xml:space="preserve"
             >
+              <title>Setas detalhe posicionadas antes do título</title>
+
               <style type="text/css">
                 .st0 {
                   fill: var(--cor-verde);
