esboço do js para carregar o conteúdo

--- a/semanadecinemanegro/sessao_de_abertura.html
+++ b/semanadecinemanegro/sessao_de_abertura.html
@@ -128,5 +128,6 @@
       </div>
     </section>
     <script src="js/collapse.js"></script>
+    <script src="js/sessao_abertura.js"></script>
   </body>
 </html>
