criação do postBox dinamicamente na página Cine-escrituras, div não funcionando em 100% depois de adicionar o flex-direction

--- a/semanadecinemanegro/cine_escrituras_pretas.html
+++ b/semanadecinemanegro/cine_escrituras_pretas.html
@@ -62,5 +62,11 @@
         <div class="mainIllus"><img src="img/cine.png" alt="" /></div>
       </div>
     </section>
+    <section>
+      <div class="container containerFilme"></div>
+    </section>
+
+    <script src="js/cineEscrituras.js"></script>
+    <script src="js/collapse.js"></script>
   </body>
 </html>
