--- a/semanadecinemanegro/cine_escrituras_pretas.html
+++ b/semanadecinemanegro/cine_escrituras_pretas.html
@@ -12,7 +12,6 @@
       <div class="mainBanner">
         <div class="mainInfo">
           <div class="title">
-            <!-- <img src="img/detalhe_topBar.svg" alt="" /> -->
             <svg
               xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -36,7 +35,7 @@
                 d="M39.9,29.4L11.1,58.2L0,47.6l18.4-18.2L0,11.2L11.1,0.6L39.9,29.4z M91.3,10.4l-18.7,19l18.7,18.9L80.2,58.9  L62.1,40.2L44,58.9L32.9,48.3l18.7-18.9l-18.7-19L44,0l18.1,18.7L80.2,0L91.3,10.4z M124.5,11.2l-18.4,18.2l18.4,18.2l-11.2,10.6  L84.5,29.4l28.8-28.8L124.5,11.2z"
               />
             </svg>
-            <h1>Cine-Escrituras Pretas</h1>
+            <h1>Cine-Escrituras Pretas</br>BLACK CINE-WRITING</h1>
           </div>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sit
@@ -63,7 +62,7 @@
       </div>
     </section>
     <section>
-      <div class="container containerFilme"></div>
+      <div class="container containerColumn"></div>
     </section>
 
     <script src="js/cineEscrituras.js"></script>
