--- a/semanadecinemanegro/oficinas.html
+++ b/semanadecinemanegro/oficinas.html
@@ -64,7 +64,7 @@
       </div>
     </section>
     <section>
-      <div class="container">
+      <div class="container containerColumn">
         <div class="postBox">
           <div class="postInfo">
             <h1>
