notas para a criação de cada sessão

--- a/semanadecinemanegro/cine_escrituras_pretas.html
+++ b/semanadecinemanegro/cine_escrituras_pretas.html
@@ -62,7 +62,12 @@
       </div>
     </section>
     <section>
-      <div class="container containerColumn"></div>
+      <div class="container containerColumn">
+        <!--DIV DE COLLAPSE 
+        DIV DE conteúdo que vai ser usada no script 
+        Eu acho que pra esse, a gente vai precisar criar uma função
+        pra cada sessão por uma questão de organização (?) -->
+      </div>
     </section>
 
     <script src="js/cineEscrituras.js"></script>
