--- a/semanadecinemanegro/sessao_de_abertura.html
+++ b/semanadecinemanegro/sessao_de_abertura.html
@@ -63,70 +63,9 @@
       </div>
     </section>
     <section>
-      <div class="container">
-        <div class="postBox">
-          <div
-            class="postImg filmeImg"
-            style="background-image: url('img/filmes/MB_01.jpg')"
-          ></div>
-          <div class="postInfo">
-            <h1>A MORTE BRANCA DO FEITICEIRO NEGRO</h1>
-            <h2>THE WHITE DEATH OF THE BLACK WIZARD</h2>
-            <h3>SANTA CATARINA, 2020, 10’</h3>
-            <p>
-              Memórias do passado escravista brasileiro transbordam em paisagens
-              etéreas e ruídos angustiantes. Através de um poético ensaio
-              visual, uma reflexão sobre silenciamento e invisibilização do povo
-              preto em diáspora, numa jornada íntima e sensorial.
-            </p>
-            <p>
-              Memories of the Brazilian slavery past overflow into ethereal
-              landscapes and harrowing noises. Through a visual poetic essay, an
-              intimate and sensory journey reflects on the silencing and
-              invisibility of black people in diaspora.
-            </p>
-            <div class="btn-filmes">
-              <div class="info">
-                <button type="button" class="collapsible">
-                  MAIS INFORMAÇÕES <i class="fas fa-chevron-down"></i>
-                </button>
-                <div class="content">
-                  <ul>
-                    <li>direção/director: Rodrigo Ribeiro</li>
-                    <li>roteiro/script: Rodrigo Ribeiro / Timóteo</li>
-                    <li>
-                      produção/production: Julia Faraco / Rodrigo Ribeiro / Luiz
-                      Gustavo Laurindo
-                    </li>
-                    <li>
-                      fotografia/cinematography: Carlos Adelino / Rodrigo
-                      Ribeiro
-                    </li>
-                    <li>
-                      montagem/editing: Rodrigo Ribeiro / Carlos Eduardo Ceccon
-                      / Julia Faraco
-                    </li>
-                    <li>som/sound: Juçara Marçal / Cadu Tenório</li>
-                    <li>
-                      edição de som sound/edition: Rodrigo Ribeiro / Leandro
-                      Cordeiro
-                    </li>
-                    <li>
-                      empresa produtora/production company: Gata Maior Filmes
-                    </li>
-                    <li>contato/contact: (e-mail) contato@gatamaior.com.br</li>
-                    <li>Classificação Indicativa: 16 anos</li>
-                  </ul>
-                </div>
-              </div>
-              <a href="/" class="btn"
-                >Assista o filme <i class="fas fa-external-link-alt"></i
-              ></a>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div class="container containerColumn"></div>
     </section>
+    <script src="js/donaZeze.js"></script>
     <script src="js/collapse.js"></script>
   </body>
 </html>
