fontawesome funcionando depois de colocar local + ajuste nos botões e espaçamentos do card de filmes

--- a/semanadecinemanegro/mostra_surreal16.html
+++ b/semanadecinemanegro/mostra_surreal16.html
@@ -8,6 +8,10 @@
     </title>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <link rel="stylesheet" type="text/css" href="css/screen.css" />
+    <link
+      rel="stylesheet"
+      href="node_modules/@fortawesome/fontawesome-free/css/all.css"
+    />
   </head>
   <body>
     <section>
@@ -64,5 +68,10 @@
         <div class="mainIllus"><img src="img/surreal16.png" alt="" /></div>
       </div>
     </section>
+    <section>
+      <div class="container containerColumn"></div>
+    </section>
+    <script src="js/surreal16.js"></script>
+    <script src="js/collapse.js"></script>
   </body>
 </html>
