--- a/semanadecinemanegro/debates.html
+++ b/semanadecinemanegro/debates.html
@@ -6,6 +6,10 @@
     <title>Debates</title>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <link rel="stylesheet" type="text/css" href="css/screen.css" />
+    <link
+      rel="stylesheet"
+      href="node_modules/@fortawesome/fontawesome-free/css/all.css"
+    />
   </head>
   <body>
     <section>
