--- a/semanadecinemanegro/mostra_homenagem.html
+++ b/semanadecinemanegro/mostra_homenagem.html
@@ -8,6 +8,10 @@
     </title>
     <link rel="stylesheet" type="text/css" href="css/main.css" />
     <link rel="stylesheet" type="text/css" href="css/screen.css" />
+    <link
+      rel="stylesheet"
+      href="node_modules/@fortawesome/fontawesome-free/css/all.css"
+    />
   </head>
   <body>
     <section>
