--- a/semanadecinemanegro/mostra_surreal16.html
+++ b/semanadecinemanegro/mostra_surreal16.html
@@ -42,7 +42,9 @@
                 d="M39.9,29.4L11.1,58.2L0,47.6l18.4-18.2L0,11.2L11.1,0.6L39.9,29.4z M91.3,10.4l-18.7,19l18.7,18.9L80.2,58.9  L62.1,40.2L44,58.9L32.9,48.3l18.7-18.9l-18.7-19L44,0l18.1,18.7L80.2,0L91.3,10.4z M124.5,11.2l-18.4,18.2l18.4,18.2l-11.2,10.6  L84.5,29.4l28.8-28.8L124.5,11.2z"
               />
             </svg>
-            <h1>Surreal16 Collective, Um Novo Olhar para o Cinema Nigeriano</h1>
+            <h1>Surreal16 Collective, Um Novo Olhar para o Cinema Nigeriano</br><span 
+              style="font-size: 24px; color:var(--cor-cinza-escuro);"
+                >Surreal16 Collective, A New Look at Nigerian Cinema</span></h1>
           </div>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sit
