--- a/semanadecinemanegro/sessao_de_abertura.html
+++ b/semanadecinemanegro/sessao_de_abertura.html
@@ -40,7 +40,11 @@
                 d="M39.9,29.4L11.1,58.2L0,47.6l18.4-18.2L0,11.2L11.1,0.6L39.9,29.4z M91.3,10.4l-18.7,19l18.7,18.9L80.2,58.9  L62.1,40.2L44,58.9L32.9,48.3l18.7-18.9l-18.7-19L44,0l18.1,18.7L80.2,0L91.3,10.4z M124.5,11.2l-18.4,18.2l18.4,18.2l-11.2,10.6  L84.5,29.4l28.8-28.8L124.5,11.2z"
               />
             </svg>
-            <h1>Maria José Novais Oliveira - Nossa atriz</h1>
+            <h1>Maria José Novais Oliveira - Nossa atriz</br><span 
+              style="font-size: 24px; color:var(--cor-cinza-escuro);"
+                >Maria José Novais Oliveira: Our Actress
+                </span
+              ></h1>
           </div>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sit
