--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         autoplaySpeed: 3000,
         prevArrow: false,
         nextArrow: false,
+        pauseOnHover: false,
       });
     </script>
   </body>
